--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -5,19 +5,22 @@
     <% @listings.each do |listing| %>
       <div class="col-md-3">
           <div class="thumbnail">
-            <%= image_tag listing.image.url %>
+            <%= link_to image_tag(listing.image.url), listing%>
             <div class="caption">
               <h3><%= listing.name %></h3>
               <p><%= number_to_currency(listing.price) %></p><br/>
               <p>Sold By: <%= listing.user.name %></p><br/>
               <p><%= listing.description %></p><br/>
-              <%= link_to 'Show', listing, class: "btn btn-link", role: "button" %>|
-              <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>| 
-              <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %> 
+              <% if(user_signed_in?) && (current_user == listing.user) %>|
+                <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>| 
+                <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
+              <% end %> 
             </div>
           </div>
         </div>
       <% end %>
   </div>
 <br>
-<%= link_to 'New Listing', new_listing_path, class: "btn btn-primary btn-lg" %>
+<% if(user_signed_in?) %>
+  <%= link_to 'New Listing', new_listing_path, class: "btn btn-primary btn-lg" %>
+<% end %>
