--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,4 +1,8 @@
-<p id="notice"><%= notice %></p>
+<div class="jumbotron">
+  <h1>Handcrafted CoolStuff</h1>
+  <p>Hand Made great crafts!</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+</div>
 
 <h1>Listing Listings</h1>
   <div class=" center row">
