--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -2,7 +2,7 @@
   <% if @listing.errors.any? %>
     <div id="error_explanation" class="alert alert-danger alert-dismissible" role="alert">
      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <h2><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
+      <h><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
       <ul>
       <% @listing.errors.full_messages.each do |message| %>
         <li><%= message %></li>
