--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -4,18 +4,21 @@
 		<div class="thumbnail">
 			<%= image_tag @listing.image.url %>
 		</div>
-		<% if(current_user == @listing.user) %>
-			<%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-link" %> |
-		<% end %>
-		<%= link_to 'Back', listings_path, class: "btn btn-link" %>
 	</div>
 	<div class="col-md-6">
 		<h3><%= @listing.name %></h3>
 		<p><%= number_to_currency(@listing.price) %></p>
 		<p><%= @listing.description %></p>
+		<br/>
+		<div class="center">
+			<%= link_to 'Buy It Now', new_listing_order_path(@listing), class: "btn btn-primary" %>
+		</div>
 	</div>
 </div>
-
+<% if(current_user == @listing.user) %>
+			<%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-link" %> |
+		<% end %>
+		<%= link_to 'Back', listings_path, class: "btn btn-link" %>
 </div>
 
 
