--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,14 +18,28 @@
         <li><%= link_to "Contact", pages_contact_path %> </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <% if user_signed_in? %>
-           <li><%= link_to "My Listings", seller_path %> </li>
-          <li><%= link_to "Edit Profile", edit_user_registration_path %> </li>
-          <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %> </li>
-        <% else %>
-          <li><%= link_to "Sign Up", new_user_registration_path %> </li>
-          <li><%= link_to "Sign In", new_user_session_path %> </li>
-        <% end %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">My Stuff <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to "My Listings", seller_path %> </li>
+            <li><%= link_to "My Sales", sales_path %> </li>
+            <li><%= link_to "My Purchases", purchases_path %> </li>
+            
+          </ul>
+        </li>
+         <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <% if user_signed_in? %>
+              <li><%= link_to "Edit Profile", edit_user_registration_path %> </li>
+              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %> </li>
+            <% else %>
+              <li><%= link_to "Sign Up", new_user_registration_path %> </li>
+              <li><%= link_to "Sign In", new_user_session_path %> </li>
+            <% end %>
+          </ul>
+        </li>
+         
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
