--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,7 @@
         <li><%= link_to "Contact", pages_contact_path %> </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+      <% if user_signed_in? %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">My Stuff <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -26,9 +27,17 @@
             <li><%= link_to "My Purchases", purchases_path %> </li>
             
           </ul>
+          <% end %>
         </li>
          <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+            <% if user_signed_in? %>
+              Sign Out
+            <% else %>
+              Account
+            <% end %>
+            <span class="caret"></span>
+          </a>
           <ul class="dropdown-menu" role="menu">
             <% if user_signed_in? %>
               <li><%= link_to "Edit Profile", edit_user_registration_path %> </li>
